# hackathon

./: README.md  pyproject.toml
doc_triage/: cli.py  constants.py  detectors.py  doctor.py  models.py  reporting.py  runtime.py
tests/: test_agent.py  test_cli.py  test_contract_edges.py  test_e2e.py  test_integrations.py  test_ocr.py  test_scan.py
